# SympRSSM

./: .gitignore  .gitmodules  pyproject.toml
configs/: cr3bp.yaml  ks.yaml
envs/: __init__.py  cr3bp.py  cr3bp_validation.py  ks.py  ks_validation.py  pendulum.py
integrators/: __init__.py  leapfrog.py  yoshida4.py
models/: freeform_rssm.py  hamiltonian_net.py  noether.py  rk4_rssm.py  symp_rssm.py
results/: pendulum_simple_energy_drift.csv
scripts/: modal_pendulum.py  setup_dreamerv3_env.sh  train_dreamer_baseline.py  train_pendulum_sanity.py
tests/: test_envs.py  test_hamiltonian_net.py  test_integrators.py  test_noether.py
