[project]
name = "symplectic-dreamer"
version = "0.1.0"
description = "Symplectic Dreamer: Structure-Preserving World Models for Chaotic Physical Systems"
authors = [{name = "Venkat Karthik Terli"}]
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "jax[cuda12]>=0.4.30",
    "jaxlib>=0.4.30",
    "equinox>=0.11.0",
    "optax>=0.2.0",
    "gymnasium>=1.0.0",
    "numpy>=1.26.0",
    "matplotlib>=3.8.0",
    "pyyaml>=6.0",
    "tqdm>=4.66.0",
    "wandb>=0.17.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-xdist>=3.5",
    "ruff>=0.4.0",
]
cpu = [
    "jax>=0.4.30",
    "jaxlib>=0.4.30",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"
